--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Semillero 2020</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css">
+    <!-- <link type="text/css" rel="stylesheet" href="css/style.css"> -->
+    <link type="text/css" rel="stylesheet" href="css/main.css">
 </head>
 
-<body> 
-    <header>
+<body>
+    <!-- <header>
         <div class="superior">
             <div class="contenedor">
                 <p class="fecha">Monday - Saturday, 8am to 10pm</p>
@@ -389,7 +390,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
