Books section and parallax efect

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
         <div class="overlay"></div>
         <div class="contenedor">
             <div class="info-banner">
-
                 <h2>ProOnliPc medical group</h2>
                 <p>Provide best quality healthcare for you</p>
                 <div class="datos">
@@ -88,45 +87,42 @@
                     </ul>
                 </div>
             </div>
-
             <img src="img/img-1.png" alt="">
             <div class="arrow-up">
-
             </div>
         </div>
     </section>
-    <!--<section>
-        <main class="contenedor-1">
+    <section>
+        <main class="contenedor">
             <div class="caracteristicas">
-               
-                  <article>
-                      <div class="cont-ico">
-                         <img src="img/iconos/check-blanco.svg" alt="">
-                      </div>
-                      <h3>Make an appoinment</h3>
-                      <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
-                    </article>
-                    <article>
-                        <div class="cont-ico">
-                          <img src="img/iconos/paquetes.svg" alt="">
-                        </div>
-                      <h3>Choose your package</h3>
-                      <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
-                    </article>
-                    <article>
-                        <div class="cont-ico">
-                           <img src="img/iconos/doctor-color.svg" alt="">
-                        </div>
-                       <h3>Help by specialist</h3>
-                       <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
-                    </article>
-                    <article>
-                        <div class="cont-ico">
-                         <img src="img/iconos/hospital.svg" alt="">
-                        </div>
-                        <h3>Get diagnostic report</h3>
-                        <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
-                    </article>         
+                <article>
+                    <div class="cont-ico">
+                        <img src="img/iconos/check-blanco.svg" alt="">
+                    </div>
+                    <h3>Make an appoinment</h3>
+                    <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
+                </article>
+                <article>
+                    <div class="cont-ico">
+                        <img src="img/iconos/paquetes.svg" alt="">
+                    </div>
+                    <h3>Choose your package</h3>
+                    <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
+                </article>
+                <article>
+                    <div class="cont-ico">
+                        <img src="img/iconos/doctor-color.svg" alt="">
+                    </div>
+                    <h3>Help by specialist</h3>
+                    <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
+                </article>
+                <article>
+                    <div class="cont-ico">
+                        <img src="img/iconos/hospital.svg" alt="">
+                    </div>
+                    <h3>Get diagnostic report</h3>
+                    <p>Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.</p>
+                </article>
             </div>
             <div class="libros">
                 <h2>In an emergency? Need help now?</h2>
@@ -140,8 +136,8 @@
                         <a href="">
                             <img src="img/iconos/estetoscopio.svg" alt="">
                             <div class="cont-contenido">
-                             <h4>Medical checku</h4>
-                             <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                                <h4>Medical checku</h4>
+                                <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
                             </div>
                         </a>
                     </li>
@@ -149,8 +145,8 @@
                         <a href="">
                             <img src="img/iconos/servicios-enfermera.svg" alt="">
                             <div class="cont-contenido">
-                             <h4>Nursing Services</h4>
-                             <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                                <h4>Nursing Services</h4>
+                                <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
                             </div>
                         </a>
                     </li>
@@ -158,8 +154,8 @@
                         <a href="">
                             <img src="img/iconos/icono-cruz.svg" alt="">
                             <div class="cont-contenido">
-                             <h4>Pharmacy</h4>
-                             <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                                <h4>Pharmacy</h4>
+                                <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
                             </div>
                         </a>
                     </li>
@@ -169,17 +165,17 @@
                         <a href="">
                             <img src="img/iconos/icono-hospital.svg" alt="">
                             <div class="cont-contenido">
-                             <h4>Gyn Care</h4>
-                             <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
-                           </div>
+                                <h4>Gyn Care</h4>
+                                <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="">
                             <img src="img/iconos/filtro.svg" alt="">
                             <div class="cont-contenido">
-                             <h4>Neurology</h4>
-                             <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                                <h4>Neurology</h4>
+                                <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
                             </div>
                         </a>
                     </li>
@@ -187,8 +183,9 @@
                         <a href="">
                             <img src="img/iconos/doctor-color.svg" alt="">
                             <div class="cont-contenido">
-                              <h4>Sleep Center<h4>
-                              <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                                <h4>Sleep Center
+                                    <h4>
+                                        <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
                             </div>
                         </a>
                     </li>
@@ -196,11 +193,11 @@
             </div>
         </main>
     </section>
-    <section class="doctores">
+    <!--<section class="doctores">
         <div class="contenedor">
             <h2>Doctors</h2>
             <p>Ea melius ceteros oportere quo, pri habeo viderer facilisi ei</p>
-            <div class="tabs-medicos"></div> 
+            <div class="tabs-medicos"></div>
             <div class="rotador-imagenes"></div>
             <nav class="contador-rotador">
                 <ul>
@@ -218,11 +215,11 @@
                     </li>
                 </ul>
             </nav>
-            <div class="doctor-img">              
+            <div class="doctor-img">
                 <img src="img/doctor-1.jpg" alt="">
                 <img src="img/doctor-2.jpg" alt="">
                 <img src="img/doctor-3.jpg" alt="">
-                <img src="img/doctor-4.jpg" alt="">              
+                <img src="img/doctor-4.jpg" alt="">
             </div>
         </div>
     </section>
@@ -231,11 +228,11 @@
             <h2>Our facilities</h2>
             <p>Ea melius ceteros oportere quo, pri habeo viderer facilisi ei</p>
             <div class="rotador-imagenes"></div>
-            <div class="instalaciones-img">              
+            <div class="instalaciones-img">
                 <img src="img/1.jpg" alt="">
                 <img src="img/2.jpg" alt="">
                 <img src="img/3.jpg" alt="">
-                <img src="img/4.jpg" alt="">              
+                <img src="img/4.jpg" alt="">
             </div>
         </div>
     </section>
@@ -326,10 +323,18 @@
             <h2>Our partner</h2>
             <p>Take charge of your health today with our specially designed health packages</p>
             <ul>
-                <li><a href=""><img src="img/partner-1.jpg" alt="imagen-1"></a></li>
-                <li><a href=""><img src="img/partner-2.jpg" alt="imagen-2"></a></li>
-                <li><a href=""><img src="img/partner-3.jpg" alt="imagen-3"></a></li>
-                <li><a href=""><img src="img/partner-4.jpg" alt="imagen-4"></a></li>
+                <li>
+                    <a href=""><img src="img/partner-1.jpg" alt="imagen-1"></a>
+                </li>
+                <li>
+                    <a href=""><img src="img/partner-2.jpg" alt="imagen-2"></a>
+                </li>
+                <li>
+                    <a href=""><img src="img/partner-3.jpg" alt="imagen-3"></a>
+                </li>
+                <li>
+                    <a href=""><img src="img/partner-4.jpg" alt="imagen-4"></a>
+                </li>
             </ul>
         </div>
     </section>
