--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
                         <a href="">
                             <img src="img/iconos/estetoscopio.svg" alt="">
                             <div class="cont-contenido">
-                                <h4>Medical checku</h4>
+                                <h4>Medical checkup</h4>
                                 <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
                             </div>
                         </a>
                     </li>
+
                     <li>
                         <a href="">
                             <img src="img/iconos/servicios-enfermera.svg" alt="">
@@ -183,9 +184,8 @@
                         <a href="">
                             <img src="img/iconos/doctor-color.svg" alt="">
                             <div class="cont-contenido">
-                                <h4>Sleep Center
-                                    <h4>
-                                        <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                                <h4>Sleep Center</h4>
+                                <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
                             </div>
                         </a>
                     </li>
@@ -193,12 +193,11 @@
             </div>
         </main>
     </section>
-    <!--<section class="doctores">
+    <section class="doctores">
         <div class="contenedor">
             <h2>Doctors</h2>
             <p>Ea melius ceteros oportere quo, pri habeo viderer facilisi ei</p>
-            <div class="tabs-medicos"></div>
-            <div class="rotador-imagenes"></div>
+            <hr>
             <nav class="contador-rotador">
                 <ul>
                     <li>
@@ -216,14 +215,34 @@
                 </ul>
             </nav>
             <div class="doctor-img">
-                <img src="img/doctor-1.jpg" alt="">
-                <img src="img/doctor-2.jpg" alt="">
-                <img src="img/doctor-3.jpg" alt="">
-                <img src="img/doctor-4.jpg" alt="">
+                <div class="doctor-info">
+
+                    <img src="img/doctor-1.jpg" alt="">
+                    <h3>Alice Grue</h3>
+                    <label for="">Psychiatrist</label>
+                </div>
+                <div class="doctor-info">
+
+                    <img src="img/doctor-2.jpg" alt="">
+                    <h3>Joseph Murphy</h3>
+                    <label for="">Cardiologist</label>
+                </div>
+                <div class="doctor-info">
+
+                    <img src="img/doctor-3.jpg" alt="">
+                    <h3>Alison Davis</h3>
+                    <label for="">Cardiologist</label>
+                </div>
+                <div class="doctor-info">
+
+                    <img src="img/doctor-4.jpg" alt="">
+                    <h3>Adam Taylor</h3>
+                    <label for="">Neurologist</label>
+                </div>
             </div>
         </div>
     </section>
-    <section class="instalaciones">
+    <!--<section class="instalaciones">
         <div class="contenedor">
             <h2>Our facilities</h2>
             <p>Ea melius ceteros oportere quo, pri habeo viderer facilisi ei</p>
@@ -273,7 +292,7 @@
         </div>
     </section>
     <section class="paquetes">
-        <div class="contenedor">
+        <div class="contenedor">    
             <h2>Health packages</h2>
             <p>Take charge of your health today with our specially designed health packages</p>
             <div class="paquete-1">
