--- a/index.html
+++ b/index.html
@@ -242,20 +242,61 @@
             </div>
         </div>
     </section>
-    <!--<section class="instalaciones">
+    <section class="instalaciones">
         <div class="contenedor">
             <h2>Our facilities</h2>
             <p>Ea melius ceteros oportere quo, pri habeo viderer facilisi ei</p>
-            <div class="rotador-imagenes"></div>
-            <div class="instalaciones-img">
-                <img src="img/1.jpg" alt="">
-                <img src="img/2.jpg" alt="">
-                <img src="img/3.jpg" alt="">
-                <img src="img/4.jpg" alt="">
+            <hr>
+            <!-- <div class="rotador-imagenes"></div> -->
+            <div class="slider">
+                <input type="radio" name="slider-instalaciones" id="slider-1" checked>
+                <input type="radio" name="slider-instalaciones" id="slider-2">
+                <input type="radio" name="slider-instalaciones" id="slider-3">
+                <input type="radio" name="slider-instalaciones" id="slider-4">
+                <input type="radio" name="slider-instalaciones" id="slider-5">
+                <input type="radio" name="slider-instalaciones" id="slider-6">
+                <div class="box-carousel">
+                    <ul class="carousel">
+                        <li><img id="slide-1" src="img/1.jpg" alt=""></li>
+                        <li><img id="slide-2" src="img/2.jpg" alt=""></li>
+                        <li><img id="slide-3" src="img/3.jpg" alt=""></li>
+                        <li><img id="slide-4" src="img/4.jpg" alt=""></li>
+                        <li><img id="slide-5" src="img/5.jpg" alt=""></li>
+                        <li><img id="slide-6" src="img/6.jpg" alt=""></li>
+                        <li><img id="slide-7" src="img/1.jpg" alt=""></li>
+                        <li><img id="slide-8" src="img/2.jpg" alt=""></li>
+                        <li><img id="slide-9" src="img/3.jpg" alt=""></li>
+                        <li><img id="slide-10" src="img/4.jpg" alt=""></li>
+                        <li><img id="slide-11" src="img/5.jpg" alt=""></li>
+                        <li><img id="slide-12" src="img/6.jpg" alt=""></li>
+                        <li><img id="slide-12" src="img/1.jpg" alt=""></li>
+                        <li><img id="slide-13" src="img/2.jpg" alt=""></li>
+                        <li><img id="slide-14" src="img/4.jpg" alt=""></li>
+                        <li><img id="slide-15" src="img/5.jpg" alt=""></li>
+                        <li><img id="slide-16" src="img/6.jpg" alt=""></li>
+                        <li><img id="slide-17" src="img/1.jpg" alt=""></li>
+                        <li><img id="slide-18" src="img/2.jpg" alt=""></li>
+                        <li><img id="slide-19" src="img/3.jpg" alt=""></li>
+                        <li><img id="slide-20" src="img/4.jpg" alt=""></li>
+                        <li><img id="slide-21" src="img/5.jpg" alt=""></li>
+                        <li><img id="slide-22" src="img/6.jpg" alt=""></li>
+                        <li><img id="slide-23" src="img/6.jpg" alt=""></li>
+                        <li><img id="slide-24" src="img/6.jpg" alt=""></li>
+                    </ul>
+                </div>
+                <div class="dots">
+                    <label for="slider-1" class="dot" id="p-1"></label>
+                    <label for="slider-2" class="dot" id="p-2"></label>
+                    <label for="slider-3" class="dot" id="p-3"></label>
+                    <label for="slider-4" class="dot" id="p-4"></label>
+                    <label for="slider-5" class="dot" id="p-5"></label>
+                    <label for="slider-6" class="dot" id="p-6"></label>
+                </div>
+
             </div>
         </div>
     </section>
-    <section class="testimonios">
+    <!--<section class="testimonios">
         <div class="contenedor">
             <div class="rotador-testimonios">
                 <div class="rotador-tetimonios-item">
