seccion de testimonios

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                         <li><img id="slide-4" src="img/4.jpg" alt=""></li>
                         <li><img id="slide-5" src="img/5.jpg" alt=""></li>
                         <li><img id="slide-6" src="img/6.jpg" alt=""></li>
+
                     </ul>
                 </div>
                 <div class="dots">
@@ -269,43 +270,72 @@
             </div>
         </div>
     </section>
-    <!--<section class="testimonios">
-        <div class="contenedor">
-            <div class="rotador-testimonios">
-                <div class="rotador-tetimonios-item">
-                    <div class="comentario">
-                        <h4>Emergency Contraception</h4>
-                        <div><b>My rating:</b><img src="" alt="sprite-estrellas"></div>
-                        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud</p>
+    <section class="testimonios">
+        <div class="overlay">
+            <div class="contenedor">
+                <div class="rotador-testimonios">
+                    <div class="rotador-testimonios-item">
+                        <div class="comentario">
+                            <h4>Birth control pills</h4>
+                            <div><b>My rating:</b>
+                                <div class="ec-stars-wrapper">
+                                    <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+                                    <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+                                    <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+                                    <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+                                    <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+                                </div>
+                            </div>
+                            <!-- <img src="" alt="sprite-estrellas"></div> -->
+                            <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud</p>
+                        </div>
+                        <img src="img/testimonio-4.jpg" alt="">
+                        <h3 class="nombre">Lucas Thompson</h3>
+                        <span class="locacion">Austin, Texas</span>
                     </div>
-                    <img src="" alt="">
-                    <p class="nombre">Lucas Thompson</p>
-                    <p class="locacion">Austin, Texas</p>
-                </div>
-                <div class="rotador-tetimonios-item">
-                    <div class="comentario">
-                        <h4>Emergency Contraception</h4>
-                        <div><b>My rating:</b><img src="" alt="sprite-estrellas"></div>
-                        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud</p>
+                    <div class="rotador-testimonios-item">
+                        <div class="comentario">
+                            <h4>Radiology</h4>
+                            <div><b>My rating:</b>
+                                <div class="ec-stars-wrapper">
+                                    <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+                                    <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+                                    <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+                                    <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+                                    <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+                                </div>
+                            </div>
+                            <!-- <img src="" alt="sprite-estrellas"></div> -->
+                            <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud</p>
+                        </div>
+                        <img src="img/testimonio-5.jpg" alt="">
+                        <h3 class="nombre">Ella Mentree</h3>
+                        <span class="locacion">Fort Worth, Texas</span>
                     </div>
-                    <img src="" alt="">
-                    <p class="nombre">Ella Mentree</p>
-                    <p class="locacion">Fort Worth, Texas</p>
-                </div>
-                <div class="rotador-tetimonios-item">
-                    <div class="comentario">
-                        <h4>Emergency Contraception</h4>
-                        <div><b>My rating:</b><img src="" alt="sprite-estrellas"></div>
-                        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud</p>
+                    <div class="rotador-testimonios-item">
+                        <div class="comentario">
+                            <h4>Cervical lesions</h4>
+                            <div><b>My rating:</b>
+                                <div class="ec-stars-wrapper">
+                                    <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+                                    <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+                                    <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+                                    <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+                                    <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+                                </div>
+                            </div>
+                            <!-- <img src="" alt="sprite-estrellas"></div> -->
+                            <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud</p>
+                        </div>
+                        <img src="img/testimonio-6.jpg" alt="">
+                        <h3 class="nombre">Suzanne Adam</h3>
+                        <span class="locacion">Detroit, Michigan</span>
                     </div>
-                    <img src="" alt="">
-                    <p class="nombre">Suzanne Adam</p>
-                    <p class="locacion">Detroit, Michigan</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="paquetes">
+    <!--<section class="paquetes">
         <div class="contenedor">    
             <h2>Health packages</h2>
             <p>Take charge of your health today with our specially designed health packages</p>
