aplicando funcionalidad al sumenu more

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
                         <li>
                             <a href="">Pricing</a>
                         </li>
-                        <li>
+                        <li >
                             <span>Extra</span>
-                            <a href="">More</a>
-                            <ul class="sub-menu">
+                            <a id="menu-mas" href="#">More</a>
+                            <ul id="sub-menu" class="sub-menu">
                                 <li>
                                     <a href="">Home cta</a>
+                                    
                                 </li>
                                 <li>
                                     <a href="">Home form</a>
@@ -215,7 +216,7 @@
                 </ul>
             </nav>
             <div class="doctor-img">
-                <div class="doctor-info">
+                <div class="doctor-info" data-profesion="Psychiatrist">
 
                     <img src="img/doctor-1.jpg" alt="">
                     <h3>Alice Grue</h3>
@@ -464,5 +465,6 @@
         </div>
     </footer> -->
 </body>
-
+<script src="js/jquery.js"></script>
+<script src="js/main.js"></script>
 </html>
