--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <li>
                             <a href="">Pricing</a>
                         </li>
-                        <li >
+                        <li>
                             <span>Extra</span>
                             <a id="menu-mas" href="#">More</a>
                             <ul id="sub-menu" class="sub-menu">
                                 <li>
                                     <a href="">Home cta</a>
-                                    
+
                                 </li>
                                 <li>
                                     <a href="">Home form</a>
@@ -336,53 +336,118 @@
             </div>
         </div>
     </section>
-    <!--<section class="paquetes">
-        <div class="contenedor">    
-            <h2>Health packages</h2>
-            <p>Take charge of your health today with our specially designed health packages</p>
-            <div class="paquete-1">
-                <p class="nombre-paquete">Basic Fit 1 Package</p>
-                <div class="precio">
-                    <p>$33<sup>.99</sup>/ one time</p>
+    <section class="paquetes">
+        <div class="contenedor">
+            <h2 class="title">Health packages</h2>
+            <p class="description">Take charge of your health today with our specially designed health packages</p>
+            <div class="table-package">
+
+                <div class="package">
+                    <div class="package-header">
+                        <p class="nombre-paquete">Basic Fit 1 Package</p>
+                    </div>
+                    <div class="package-price">
+                        <p class="price">$65<sup>.99</sup><span>/ one time</span></p>
+                    </div>
+                    <div class="package-desc">
+                        <ul class="item-paquetes">
+                            <li>Anthropometry (BMI, WH Ratio)</li>
+                            <li>Post Examination Review</li>
+                            <li>General Screening – Basic</li>
+                            <li>Body Composition Analysis</li>
+                        </ul>
+                    </div>
+                    <div class="package-footer">
+                        <a href="">purchase</a>
+                    </div>
                 </div>
-                <ul class="item-paquetes">
-                    <li>Anthropometry (BMI, WH Ratio)</li>
-                    <li>Post Examination Review</li>
-                    <li>General Screening – Basic</li>
-                    <li>Health Screening Report</li>
-                </ul>
-                <a href="">purchase</a>
-            </div>
-            <div class="paquete-glow">
-                <p class="nombre-paquete">Golden Glow Package</p>
-                <div class="precio">
-                    <p>$65<sup>.99</sup>/ one time</p>
+                <div class="package">
+                    <div class="package-header">
+                        <p class="nombre-paquete">Basic Fit 1 Package</p>
+                    </div>
+                    <div class="package-price">
+                        <p class="price">$65<sup>.99</sup><span>/ one time</span></p>
+                    </div>
+                    <div class="package-desc">
+                        <ul class="item-paquetes">
+                            <li>Anthropometry (BMI, WH Ratio)</li>
+                            <li>Post Examination Review</li>
+                            <li>General Screening – Basic</li>
+                            <li>Body Composition Analysis</li>
+                            <li>Body Composition Analysis</li>
+                        </ul>
+                    </div>
+                    <div class="package-footer">
+                        <a href="">purchase</a>
+                    </div>
                 </div>
-                <ul class="item-paquetes">
-                    <li>Anthropometry (BMI, WH Ratio)</li>
-                    <li>Post Examination Review</li>
-                    <li>General Screening – Basic</li>
-                    <li>Body Composition Analysis</li>
-                    <li>GR Assessment & Scoring</li>
-                </ul>
-                <a href="">purchase</a>
-            </div>
-            <div class="paquete-2">
-                <p class="nombre-paquete">Basic Fit 2 Package</p>
-                <div class="precio">
-                    <p>$47<sup>.99</sup>/ one time</p>
+
+                <div class="package">
+                    <div class="package-header">
+                        <p class="nombre-paquete">Golden Glow Package</p>
+                    </div>
+                    <div class="package-price">
+                        <p class="price">$65<sup>.99</sup><span>/ one time</span></p>
+                    </div>
+                    <div class="package-desc">
+                        <ul class="item-paquetes">
+                            <li>Anthropometry (BMI, WH Ratio)</li>
+                            <li>Post Examination Review</li>
+                            <li>General Screening – Basic</li>
+                            <li>Body Composition Analysis</li>
+                        </ul>
+                    </div>
+                    <div class="package-footer">
+                        <a href="">purchase</a>
+                    </div>
                 </div>
-                <ul class="item-paquetes">
-                    <li>Anthropometry (BMI, WH Ratio)</li>
-                    <li>Post Examination Review</li>
-                    <li>General Screening – Basic</li>
-                    <li>Health Screening Report</li>
-                </ul>
-                <a href="">purchase</a>
+                <!-- <div class="package">
+                    <div class="package-header"></div>
+                    <div class="package-price"></div>
+                    <div class="package-desc"></div>
+                    <div class="package-footer"></div>
+                </div>
+                <div class="package">
+                    <div class="package-header"></div>
+                    <div class="package-price"></div>
+                    <div class="package-desc"></div>
+                    <div class="package-footer"></div>
+                </div>
+                <div class="paquete-1">
+                    <p class="nombre-paquete">Basic Fit 1 Package</p>
+                    <div class="precio">
+                        <p>$33<sup>.99</sup>/ one time</p>
+                    </div>
+                    <ul class="item-paquetes">
+                        <li>Anthropometry (BMI, WH Ratio)</li>
+                        <li>Post Examination Review</li>
+                        <li>General Screening – Basic</li>
+                        <li>Health Screening Report</li>
+                    </ul>
+                    <a href="">purchase</a>
+                </div>
+                <div class="paquete-glow">
+                    <div class="precio">
+                    </div>
+
+                </div>
+                <div class="paquete-2">
+                    <p class="nombre-paquete">Basic Fit 2 Package</p>
+                    <div class="precio">
+                        <p>$47<sup>.99</sup>/ one time</p>
+                    </div>
+                    <ul class="item-paquetes">
+                        <li>Anthropometry (BMI, WH Ratio)</li>
+                        <li>Post Examination Review</li>
+                        <li>General Screening – Basic</li>
+                        <li>Health Screening Report</li>
+                    </ul>
+                    <a href="">purchase</a>
+                </div> -->
             </div>
         </div>
     </section>
-    <section class="asociados">
+    <!--<section class="asociados">
         <div class="contenedor">
             <h2>Our partner</h2>
             <p>Take charge of your health today with our specially designed health packages</p>
@@ -422,49 +487,51 @@
                     <p>Nam leo lorem, tincidunt id risus ut, ornare tincidunt naqunc sit amet.</p>
                     <br>
                     <ul>
-                        <li><a href="#"><span><img src="img/iconos/calendario.svg" alt=""></span>Monday - Saturday, 8am to 10pm</a></li>
-                        <li><a href="tel:0888904711"><span><img src="img/iconos/telefono.svg" alt=""></span>+62 0888 904 711</a></li>
-                        <li><a href="mailto:hello@SystemDNS.com"><span><img src="img/iconos/correo.svg" alt=""></span>hello@SystemDNS.com</a></li>
-                    </ul>
-                </div>
-                <div class="item-footer">
-                    <h4>Our location</h4>
-                    <p>The Suithouse V303, Kuningan City, Jakarta Indonesia 12940</p>
-                    <br>
-                    <h4>Follow us</h4>
-                    <ul>
-                        <li class="facebook">
-                            <a href="#"><img src="img/iconos/facebook.svg" alt="Facebook"></a>
-                        </li>
-                        <li class="twitter">
-                            <a href="#"><img src="img/iconos/twitter.svg" alt="Twitter"></a>
-                        </li>
-                        <li class="google">
-                            <a href="#"><img src="img/iconos/google-plus.svg" alt="Google"></a>
-                        </li>
-                        <li class="vimeo">
-                            <a href="#"><img src="img/iconos/vimeo.svg" alt="Vimeo"></a>
-                        </li>
-                        <li class="dribbble">
-                            <a href="#"><img src="img/iconos/dribble.svg" alt="Dribbble"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="white">
-            <div class="contenedor">
-                <div class="left">
-                    <p>&copy;Copyright - ProOnliPc Theme. All rights reserved.</p>
-                </div>
-                <div class="right">
-                    <a href="#">ProOnliPc Education Templates</a>
-                    <p>by ProOnliPc</p>
+                        <li><a href="#"><span><img src="img/iconos/calendario.svg" alt=""></span>Monday - Saturday, 8am to 10pm</a>
+                            </li>
+                            <li><a href="tel:0888904711"><span><img src="img/iconos/telefono.svg" alt=""></span>+62 0888 904 711</a></li>
+                            <li><a href="mailto:hello@SystemDNS.com"><span><img src="img/iconos/correo.svg" alt=""></span>hello@SystemDNS.com</a></li>
+                            </ul>
+                    </div>
+                    <div class="item-footer">
+                        <h4>Our location</h4>
+                        <p>The Suithouse V303, Kuningan City, Jakarta Indonesia 12940</p>
+                        <br>
+                        <h4>Follow us</h4>
+                        <ul>
+                            <li class="facebook">
+                                <a href="#"><img src="img/iconos/facebook.svg" alt="Facebook"></a>
+                            </li>
+                            <li class="twitter">
+                                <a href="#"><img src="img/iconos/twitter.svg" alt="Twitter"></a>
+                            </li>
+                            <li class="google">
+                                <a href="#"><img src="img/iconos/google-plus.svg" alt="Google"></a>
+                            </li>
+                            <li class="vimeo">
+                                <a href="#"><img src="img/iconos/vimeo.svg" alt="Vimeo"></a>
+                            </li>
+                            <li class="dribbble">
+                                <a href="#"><img src="img/iconos/dribble.svg" alt="Dribbble"></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer> -->
+            <div class="white">
+                <div class="contenedor">
+                    <div class="left">
+                        <p>&copy;Copyright - ProOnliPc Theme. All rights reserved.</p>
+                    </div>
+                    <div class="right">
+                        <a href="#">ProOnliPc Education Templates</a>
+                        <p>by ProOnliPc</p>
+                    </div>
+                </div>
+            </div>
+            </footer> -->
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/main.js"></script>
+
 </html>
