fix bug overflow

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
             <h2>Doctors</h2>
             <p>Ea melius ceteros oportere quo, pri habeo viderer facilisi ei</p>
             <hr>
+            <!-- <div>
+                <span><i class="fas fa-bars"></i></span>
+            </div> -->
+
             <nav class="contador-rotador">
                 <ul>
                     <li>
